w2 assignment css contrast issues

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -71,15 +71,9 @@ nav a {
 	transition: 0.5s;
 }
 
-nav a:hover {
-    text-decoration: underline;
+.active, nav a:hover {
     background-color: rgb(0, 100, 0, 0.5);
     color: var(--color4);
-}
-
-.active {
-    color: var(--color6);
-    text-decoration: underline;
 }
 
 .show li {
